--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade" id="modalAvis" tabindex="-1" aria-labelledby="modal avis" aria-hidden="true">
+<div class="modal fade" id="myModalAvis" tabindex="-1" aria-labelledby="modal avis" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-body border-0 p-0">
@@ -30,6 +30,8 @@
     </div>
   </div>
 </div>
+
+
 <div class="container">
   <div class="card d-flex p-1 justify-content-center my-3">
     <div style="height: 230px; width: 100%;;">
