--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,7 +8,8 @@ $light-yellow: #fceb9c;
 $orange: #e67e22;
 $light-orange: #faac54;
 $green: #1edd88;
-$light-green: #a3e893;
+// $light-green: #a3e893;
+$light-green: #97c475;
 $light-brown: #d19b62;
 $light-beige: #ffe5ca;
 $brown: #895f33;
