--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -5,12 +5,9 @@
   border: 1px solid $brown;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   transition-duration: 0.4s;
-  // background-color: $brown;
-  // color: white;
   position: relative;
   border-radius: 5px;
   margin-top: 15px;
-  // margin: 10px;
   padding: 10px;
   font-size: 20px;
   font-weight: bold;
@@ -21,4 +18,61 @@
     background-color: $brown;
     color: white;
   }
+}
+
+#simpleButton {
+  display: inline-block;
+  border: 1px solid white;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition-duration: 0.4s;
+  background-color: $light-brown;
+  color: white;
+  position: relative;
+  border-radius: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+}
+
+#buttonRide {
+  display: inline-block;
+  border: 1px solid white;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition-duration: 0.4s;
+  background-color: #97c475;
+  color: black;
+  // background-color: $light-beige;
+  // color: $brown;
+  position: relative;
+  border-radius: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  width: 50%;
+}
+
+#buttonAvis {
+  display: inline-block;
+  border: 1px solid white;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition-duration: 0.4s;
+  background-color: white;
+  color: grey;
+  // background-color: $light-beige;
+  // color: $brown;
+  position: relative;
+  border-radius: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  width: 30%;
 }
