--- a/app/assets/stylesheets/rides/_show.scss
+++ b/app/assets/stylesheets/rides/_show.scss
@@ -1,9 +1,9 @@
 .rating-star {
   cursor: pointer;
-  color: gray; // Couleur de base des étoiles
-  font-size: 24px; // Taille des étoiles
+  color: gray; /* Couleur de base des étoiles */
+  font-size: 24px; /* Taille des étoiles */
+}
 
-  &.checked {
-    color: black; // Couleur des étoiles sélectionnées
-  }
+.rating-star.checked {
+  color: black; /* Couleur des étoiles sélectionnées */
 }
