--- a/app/views/rides/show.html.erb
+++ b/app/views/rides/show.html.erb
@@ -3,24 +3,22 @@
   <h2><%= @ride.course.name %></h2>
     <% @ride.course.average.to_i.times do %>
       <i class="fa-solid fa-star"></i>
-        <% end %>
-      <% (5 - @ride.course.average.to_i).times do %>
+    <% end %>
+    <% (5 - @ride.course.average.to_i).times do %>
       <i class="fa-regular fa-star"></i>
-        <% end %>
+    <% end %>
 
-        <div class="container">
-  <div class="card d-flex p-1 justify-content-center my-3">
-    <div style="height: 230px; width: 100%;;">
-
-</div>
-</div>
-</div>
-        <div class="d-flex justify-content-around">
-          <div class="col-sm-4"><%= @ride.course.timing %>min</div>
-          <div class="col-sm-4"><%= @ride.course.distance %>m</div>
-          <div class="col-sm-4"><%= @ride.course.distance %>m</div>
-        </div>
-        
+  <div class="container">
+    <div class="card d-flex p-1 justify-content-center my-3">
+      <div style="height: 230px; width: 100%;;">
+      </div>
+    </div>
+  </div>
+    <div class="d-flex justify-content-around">
+      <div class="col-sm-4"><%= @ride.course.timing %>min</div>
+      <div class="col-sm-4"><%= @ride.course.distance %>m</div>
+      <div class="col-sm-4"><%= @ride.course.distance %>m</div>
+    </div>
           <div class="d-flex justify-content-around">
             <i class="fa-regular fa-clock"></i>
             <i class="fa-solid fa-location-dot"></i>
@@ -28,63 +26,65 @@
           </div>
           <div class="d-flex justify-content-center align-items-center">
             <button type="button" class="border-0 btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalDonneAvis">Donne ton avis !</button>
-              <div class="modal fade" id="modalDonneAvis" tabindex="-1" aria-labelledby="modal donne avis" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered">
-                      <div class="modal-content">
-                        <div class="modal-body border-0 p-0">
-                          <div class="col-sm-6">
-                              <div class="card">
-                                <div class="card-body">
-                                  <h2 class="card-title">Laisse un avis pour ta course !</h2>
-                                  <hr>
-                                  <p class="card-text">
-
-<h2>Laisser un avis :</h2>
-<%= form_with(model: [@ride, @review], local: true) do |form| %>
-  <div class="field">
-    <%= form.label :rating, 'Note' %><br>
-    <div class="rating-stars">
-      <% (1..5).each do |i| %>
-        <input type="checkbox" id="rating_<%= i %>" name="review[rating]" value="<%= i %>" style="display: none;">
-        <label for="rating_<%= i %>" class="rating-star">
-          <i class="fas fa-star"></i>
-        </label>
-
-      <% end %>
-      <%= form.text_field :comment %>
-      <%= form.submit :Submit, class:"btn btn-primary" %>
-    </div>
-  </div>
-
-<% end %>
-
-
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-    const stars = document.querySelectorAll('.rating-star');
-
-    stars.forEach(function(star) {
-      star.addEventListener('click', function() {
-        const rating = parseInt(star.previousElementSibling.value);
-        stars.forEach(function(s) {
-          s.classList.remove('checked');
-        });
-        for (let i = 0; i < rating; i++) {
-          stars[i].classList.add('checked');
-        }
-      });
-    });
-  });
-</script>
-
-
-                                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
-                              </div>
+            <div class="modal fade" id="modalDonneAvis" tabindex="-1" aria-labelledby="modal donne avis" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                  <div class="modal-body border-0 p-0">
+                    <div class="col-sm-6">
+                      <div class="card">
+                        <div class="card-body">
+                          <h2 class="card-title">Laisse un avis pour ta course !</h2>
+                            <hr>
+                            <p class="card-text">
+                          <h2>Laisser un avis :</h2>
+                            <%= form_with(model: [@ride, @review], local: true) do |form| %>
+                          <div class="field">
+                            <%= form.label :rating, 'Note' %><br>
+                            <div class="rating-stars">
+                              <% (1..5).each do |i| %>
+                              <input type="radio" id="rating_<%= i %>" name="review[rating]" value="<%= i %>" style="display: none;">
+                              <label for="rating_<%= i %>" class="rating-star">
+                                <i class="fas fa-star"></i>
+                              </label>
+                                <% end %>
                             </div>
+                              <%= form.label :comment, 'Commentaire' %><br>
+                              <%= form.text_area :comment %>
+                                <br>
+                              <%= form.submit 'Soumettre', class: "btn btn-primary" %>
+                          </div>
+                              <% end %>
+
+                                        <script>
+                                        document.addEventListener('DOMContentLoaded', function() {
+                                          const stars = document.querySelectorAll('.rating-star');
+
+                                          stars.forEach(function(star, index) {
+                                            star.addEventListener('click', function() {
+                                              const rating = index + 1;
+
+                                              // Désélectionne toutes les étoiles
+                                              stars.forEach(function(s) {
+                                                s.classList.remove('checked');
+                                              });
+
+                                              // Sélectionne les étoiles jusqu'à celle cliquée
+                                              for (let i = 0; i < rating; i++) {
+                                                stars[i].classList.add('checked');
+                                              }
+
+                                              // Met à jour la valeur du bouton radio correspondant
+                                              document.getElementById(`rating_${rating}`).checked = true;
+                                            });
+                                          });
+                                        });
+                                        </script>
                         </div>
                       </div>
                     </div>
+                  </div>
+                </div>
               </div>
+            </div>
           </div>
 </div>
