--- a/app/views/rides/show.html.erb
+++ b/app/views/rides/show.html.erb
@@ -8,34 +8,31 @@
       <i class="fa-regular fa-star"></i>
     <% end %>
 
-  <div class="container">
-    <div class="card d-flex p-1 justify-content-center my-3">
-      <div style="height: 230px; width: 100%;;">
-      </div>
-    </div>
-  </div>
-    <div class="d-flex justify-content-around">
-      <div class="col-sm-4"><%= @ride.course.timing %>min</div>
-      <div class="col-sm-4"><%= @ride.course.distance %>m</div>
-      <div class="col-sm-4"><%= @ride.course.distance %>m</div>
-    </div>
+
+        <div class="d-flex justify-content-around">
+          <div class="col-sm-4"><%= @ride.course.timing %>min</div>
+          <div class="col-sm-4"><%= @ride.course.distance %>m</div>
+          <div class="col-sm-4"><%= @ride.course.distance %>m</div>
+        </div>
           <div class="d-flex justify-content-around">
             <i class="fa-regular fa-clock"></i>
             <i class="fa-solid fa-location-dot"></i>
             <%= link_to "D", rewards_path, class: "doogs nav-link" %>
           </div>
-          <div class="d-flex justify-content-center align-items-center">
+          <div class="d-flex p-4 justify-content-center align-items-center">
+          <% unless Review.where(user: current_user, course: @ride.course).any? %>
             <button type="button" class="border-0 btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalDonneAvis">Donne ton avis !</button>
+            <% end %>
             <div class="modal fade" id="modalDonneAvis" tabindex="-1" aria-labelledby="modal donne avis" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                   <div class="modal-body border-0 p-0">
                     <div class="col-sm-6">
-                      <div class="card">
+                      <div class="card" data-controller="rating-stars">
                         <div class="card-body">
                           <h2 class="card-title">Laisse un avis pour ta course !</h2>
                             <hr>
-                            <p class="card-text">
+                            <p class="card-text p-5">
                           <h2>Laisser un avis :</h2>
                             <%= form_with(model: [@ride, @review], local: true) do |form| %>
                           <div class="field">
@@ -54,37 +51,16 @@
                               <%= form.submit 'Soumettre', class: "btn btn-primary" %>
                           </div>
                               <% end %>
+                      </div>
 
-                                        <script>
-                                        document.addEventListener('DOMContentLoaded', function() {
-                                          const stars = document.querySelectorAll('.rating-star');
-
-                                          stars.forEach(function(star, index) {
-                                            star.addEventListener('click', function() {
-                                              const rating = index + 1;
-
-                                              // Désélectionne toutes les étoiles
-                                              stars.forEach(function(s) {
-                                                s.classList.remove('checked');
-                                              });
-
-                                              // Sélectionne les étoiles jusqu'à celle cliquée
-                                              for (let i = 0; i < rating; i++) {
-                                                stars[i].classList.add('checked');
-                                              }
-
-                                              // Met à jour la valeur du bouton radio correspondant
-                                              document.getElementById(`rating_${rating}`).checked = true;
-                                            });
-                                          });
-                                        });
-                                        </script>
-                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
+          </div>
+          <div class="text-right">
+          <%= link_to "Dépense tes Doogs", rewards_path, class: "btn btn-primary float-right" %>
           </div>
 </div>
