--- a/app/views/courses/_list.html.erb
+++ b/app/views/courses/_list.html.erb
@@ -1,4 +1,4 @@
-  <div class="container w-100">
+  <div class="container w-100" data-filter-target="list">
     <% courses.each do |course| %>
     <%= link_to course_path(course), class: "text-decoration-none text-white" do %>
       <div class="card mb-3">
