--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,76 +1,43 @@
-<div class="container">
+<div class="container" data-controller="filter">
   <div class="row justify-content-evenly">
     <div class="dropdown col-4">
-      <button class="btn btn dropdown-toggle" type="button" id="dropdownFilters" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+      <button class="btn btn dropdown-toggle dropdown-filters" type="button" id="dropdownFilters" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
         Filtres
       </button>
-        <%= simple_form_for(:filter, url: root_path, method: "GET", html: { class: 'dropdown-menu'}) do |f| %>
+        <%= simple_form_for(:filter, url: root_path, method: "POST", data: { filter_target: "formfilter", action: "change->filter#filter" }, html: { class: 'dropdown-menu'}) do |f| %>
           <%= f.input :water,
                       as: :boolean,
                       label: 'Eau',
-                      wrapper_html: { class: 'dropdown-item' },
-                      input_html: { checked: params[:filter] && params[:filter][:water] == "1" }
+                      wrapper_html: { class: 'dropdown-item' }
                       %>
           <%= f.input :trashs,
                       as: :boolean,
                       label: 'Déchets',
-                      wrapper_html: { class: 'dropdown-item' },
-                      input_html: { checked: params[:filter] && params[:filter][:trashs] == "1" }
+                      wrapper_html: { class: 'dropdown-item' }
                       %>
           <%= f.input :poopbag,
                       as: :boolean,
                       label: 'Sac à crottes',
-                      wrapper_html: { class: 'dropdown-item' },
-                      input_html: { checked: params[:filter] && params[:filter][:poopbag] == "1" }
+                      wrapper_html: { class: 'dropdown-item' }
                       %>
           <%= f.input :familyfriendly,
                       as: :boolean,
                       label: 'Convient aux familles',
-                      wrapper_html: { class: 'dropdown-item' },
-                      input_html: { checked: params[:filter] && params[:filter][:familyfriendly] == "1" }
+                      wrapper_html: { class: 'dropdown-item' }
                       %>
-          <%= f.button :submit, "Filtrer", class: 'btn btn-primary dropdown-item' %>
         <% end %>
     </div>
-
     <div class="dropdown col-4">
-      <button class="btn btn dropdown-toggle" type="button" id="dropdownDistance" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
-        Lieux
-      </button>
-        <%= simple_form_for(:filter, url: root_path, method: "GET", html: { class: 'dropdown-menu' }) do |f| %>
-          <%= f.input :water,
-                      as: :boolean,
-                      label: 'Eau',
-                      wrapper_html: { class: 'dropdown-item' },
-                      input_html: { checked: params[:filter] && params[:filter][:water] == "1" }
-                      %>
-          <%= f.input :trashs,
-                      as: :boolean,
-                      label: 'Déchets',
-                      wrapper_html: { class: 'dropdown-item' },
-                      input_html: { checked: params[:filter] && params[:filter][:trashs] == "1" }
-                      %>
-          <%= f.input :poopbag,
-                      as: :boolean,
-                      label: 'Sac à crottes',
-                      wrapper_html: { class: 'dropdown-item' },
-                      input_html: { checked: params[:filter] && params[:filter][:poopbag] == "1" }
-                      %>
-          <%= f.input :familyfriendly,
-                      as: :boolean,
-                      label: 'Convient aux familles',
-                      wrapper_html: { class: 'dropdown-item' },
-                      input_html: { checked: params[:filter] && params[:filter][:familyfriendly] == "1" }
-                      %>
-          <%= f.button :submit, "Filtrer", class: 'btn btn-primary dropdown-item' %>
+        <%= simple_form_for(:distance, url: root_path, method: "POST", data: { filter_target: "formdistance", action: "change->filter#filter" }) do |f| %>
+           <%= f.input :distance, collection: [5, 10, 15], placeholder: "coucou", label: false, class: "dropdown-menu " %>
         <% end %>
     </div>
-  </div>
-</div>
 
-<div class="container w-100">
-  <div class="p-3 d-flex justify-content-start">
-    <h1 class="font-weight-bold" style="color: #D19B62;">Suggestions</h1>
   </div>
-  <%= render "list", courses: @courses %>
+  <div class="container w-100">
+    <div class="p-3 d-flex justify-content-start">
+      <h1 class="font-weight-bold" style="color: #D19B62;">Suggestions</h1>
+    </div>
+    <%= render "list", courses: @courses %>
+  </div>
 </div>
