--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 @import "dogs/index";
 @import "rewards/index";
 @import "rides/index";
+@import "user_rewards/index";
 
 //Import Mapbox libraries
 @import url("https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css");
