--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -8,7 +8,7 @@
     <% end %>
     <% if user_signed_in? %>
       <% if params[:controller] == "courses" && params[:action] == "index" %>
-        <h1 class="m-0" style="color: #895F33;">Bienvenue <%= current_user.firstname %></h1>
+        <h1 class="m-0" style="color: #d19b62;">Bienvenue <%= current_user.firstname %></h1>
       <% elsif params[:controller] == "courses" && params[:action] == "show" %>
         <h1 class="m-0" style="color: #d19b62;"><%= @course.name %></h1>
       <% elsif params[:controller] == "rides" && params[:action] == "edit" %>
