--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,7 @@
     <%= cl_image_tag current_user.photo.key, class: "user-photo", gravity: "face", height: 100, width: 100, crop: "fill", radius: "max", fetch_format: "auto" %>
   </div>
   <div class="links">
+    <%= link_to "Voir mes Achats", user_user_rewards_path(current_user), class: "btn btn-primary", id: "buttonAchat" %>
     <%= link_to "Editer mon profil", edit_user_registration_path(current_user), class: "btn btn-primary", id: "simpleButton" %>
     <%= link_to "Ma Meute", user_dogs_path(current_user), class: "btn btn-primary", id: "simpleButton" %>
     <%= link_to 'Déconnexion', destroy_user_session_path, data: { turbo_method: "delete" }, class: "btn btn-primary", id: "simpleButton" %>
