--- a/app/views/rides/show.html.erb
+++ b/app/views/rides/show.html.erb
@@ -1,27 +1,30 @@
 
 <div class= "container">
-  <h2><%= @ride.course.name %></h2>
+<div class="py-3">
+  <h2><%= @ride.course.name %> </h2>
     <% @ride.course.average.to_i.times do %>
       <i class="fa-solid fa-star"></i>
     <% end %>
     <% (5 - @ride.course.average.to_i).times do %>
       <i class="fa-regular fa-star"></i>
     <% end %>
+</div>
+      <%= render 'shared/map', course: @ride.course, style_list: "width: 100%; height: 215px; border-radius: 20px; box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.4)" %>
 
 
-        <div class="d-flex justify-content-around">
+        <div class="d-flex justify-content-around p-2">
           <div class="col-sm-4"><%= @ride.course.timing %>min</div>
           <div class="col-sm-4"><%= @ride.course.distance %>m</div>
           <div class="col-sm-4"><%= @ride.course.distance %>m</div>
         </div>
-          <div class="d-flex justify-content-around">
-            <i class="fa-regular fa-clock"></i>
-            <i class="fa-solid fa-location-dot"></i>
-            <%= link_to "D", rewards_path, class: "doogs nav-link" %>
+          <div class="d-flex justify-content-around align-items-center">
+            <i class="fa-regular fa-clock fa-2x"></i>
+            <i class="fa-solid fa-location-dot fa-2x"></i>
+            <p class="col-sm-3 fa-2x m-0">D</p>
           </div>
           <div class="d-flex p-4 justify-content-center align-items-center">
           <% unless Review.where(user: current_user, course: @ride.course).any? %>
-            <button type="button" class="border-0 btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalDonneAvis">Donne ton avis !</button>
+            <button type="button" class="border-0" data-bs-toggle="modal" data-bs-target="#modalDonneAvis" id="buttonAvis">Donne ton avis !</button>
             <% end %>
             <div class="modal fade" id="modalDonneAvis" tabindex="-1" aria-labelledby="modal donne avis" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered">
@@ -48,7 +51,7 @@
                               <%= form.label :comment, 'Commentaire' %><br>
                               <%= form.text_area :comment %>
                                 <br>
-                              <%= form.submit 'Soumettre', class: "btn btn-primary" %>
+                              <%= form.submit 'Valider', class: "btn btn-primary" %>
                           </div>
                               <% end %>
                       </div>
@@ -60,7 +63,9 @@
               </div>
             </div>
           </div>
-          <div class="text-right">
-          <%= link_to "Dépense tes Doogs", rewards_path, class: "btn btn-primary float-right" %>
+          <div class="d-flex p-4 justify-content-center align-items-center">
+          <div class="text-right" id="buttonRide" >
+          <%= link_to "Dépense tes Doogs", rewards_path, class: 'center-button' %>
           </div>
+</div>
 </div>
