--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,38 +1,43 @@
 <div class="container" data-controller="filter">
   <div class="row justify-content-evenly">
     <div class="dropdown col-4">
-      <button class="btn btn dropdown-toggle dropdown-filters" type="button" id="dropdownFilters" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+      <%= simple_form_for(:filter, url: root_path, method: "POST", data: { filter_target: "formfilter", action: "change->filter#filter" }) do |f| %>
+      <button class="btn btn dropdown-toggle dropdown-filters" type="button" id="dropdownFilters" data-bs-toggle="dropdown" data-bs-auto-close="inside" aria-expanded="false">
         Filtres
       </button>
-        <%= simple_form_for(:filter, url: root_path, method: "POST", data: { filter_target: "formfilter", action: "change->filter#filter" }, html: { class: 'dropdown-menu'}) do |f| %>
-          <%= f.input :water,
-                      as: :boolean,
-                      label: 'Eau',
-                      wrapper_html: { class: 'dropdown-item' }
-                      %>
-          <%= f.input :trashs,
-                      as: :boolean,
-                      label: 'Déchets',
-                      wrapper_html: { class: 'dropdown-item' }
-                      %>
-          <%= f.input :poopbag,
-                      as: :boolean,
-                      label: 'Sac à crottes',
-                      wrapper_html: { class: 'dropdown-item' }
-                      %>
-          <%= f.input :familyfriendly,
-                      as: :boolean,
-                      label: 'Convient aux familles',
-                      wrapper_html: { class: 'dropdown-item' }
-                      %>
-        <% end %>
+      <div class="dropdown-menu">
+              <%= f.input :water,
+                          as: :boolean,
+                          label: 'Eau',
+                          wrapper_html: { class: 'dropdown-item' }
+                          %>
+              <%= f.input :trashs,
+                          as: :boolean,
+                          label: 'Déchets',
+                          wrapper_html: { class: 'dropdown-item' }
+                          %>
+              <%= f.input :poopbag,
+                          as: :boolean,
+                          label: 'Sac à crottes',
+                          wrapper_html: { class: 'dropdown-item' }
+                          %>
+              <%= f.input :familyfriendly,
+                          as: :boolean,
+                          label: 'Convient aux familles',
+                          wrapper_html: { class: 'dropdown-item' }
+                          %>
+
+      </div>
     </div>
     <div class="dropdown col-4">
-        <%= simple_form_for(:distance, url: root_path, method: "POST", data: { filter_target: "formdistance", action: "change->filter#filter" }) do |f| %>
-           <%= f.input :distance, collection: [5, 10, 15], placeholder: "coucou", label: false, class: "dropdown-menu " %>
-        <% end %>
+      <button class="btn btn dropdown-toggle dropdown-filters" type="button" id="dropdownDistance" data-bs-toggle="dropdown" data-bs-auto-close="inside" aria-expanded="false">
+        Distance
+      </button>
+      <div class="dropdown-menu">
+        <%= f.input :distance, collection: [5, 10, 15], legend_tag: false, as: :radio_buttons, wrapper_html: { class: 'dropdown-item' } %>
+      </div>
     </div>
-
+      <% end %>
   </div>
   <div class="container w-100">
     <div class="p-3 d-flex justify-content-start">
