--- a/app/views/courses/_list.html.erb
+++ b/app/views/courses/_list.html.erb
@@ -1,45 +1,56 @@
   <div class="container w-100" data-filter-target="list">
     <% courses.each do |course| %>
-    <%= link_to course_path(course), class: "text-decoration-none text-white" do %>
-      <div class="card mb-3">
-        <div class="card-image mb-3">
-          <div style="position: relative; border-radius: 12px 12px 0 0;height: 230px; width: 100%; background-repeat: no-repeat; background-size: cover; background-image: url('<%= cl_image_path course.photos.last.key, transformation: { dpr: "auto", responsive: true, width: "auto", crop: "scale", gravity: :face} %>')">
-            <% if Ride.exists?(user: current_user, course: course) %>
-              <i class="fa-solid fa-medal" style="font-size: 2rem; position: absolute; right: 15px; top: 15px;"></i>
+      <div class="card mb-3 position-relative">
+        <%= link_to course_path(course), class: "text-decoration-none text-white" do %>
+          <div class="card-image mb-3">
+            <div style="position: relative; border-radius: 12px 12px 0 0;height: 230px; width: 100%; background-repeat: no-repeat; background-size: cover; background-image: url('<%= cl_image_path course.photos.last.key, transformation: { dpr: "auto", responsive: true, width: "auto", crop: "scale", gravity: :face} %>')">
+              <% if Ride.exists?(user: current_user, course: course) %>
+                <i class="fa-solid fa-medal" style="font-size: 2rem; position: absolute; right: 15px; top: 15px;"></i>
+              <% end %>
+            </div>
+          </div>
+          <div class="card-body">
+            <div class="d-flex justify-content-between">
+              <h5 class="card-title" style="color: #895f33;"><%= course.name %></h5>
+              <div class="d-flex ml-auto gap-1" style="color: #895f33;">
+                <% if course.trashs %>
+                  <i class="fa fa-trash gap-1"></i>
+                <% end %>
+                <% if course.water %>
+                  <i class="fa-solid fa-droplet gap-1"></i>
+                <% end %>
+                <% if course.poopbag %>
+                  <i class="fa-solid fa-poo"></i>
+                <% end %>
+                <% if course.familyfriendly %>
+                  <i class="fa-solid fa-people-group gap-1"></i>
+                <% end %>
+              </div>
+            </div>
+            <div class="d-flex justify-content-between" style="color: #895f33;">
+              <div>
+                <% course.average.to_i.times do %>
+                  <i class="fa-solid fa-star"></i>
+                <% end %>
+                <% (5 - course.average.to_i).times do %>
+                  <i class="fa-regular fa-star"></i>
+                <% end %>
+              </div>
+              <div class="card-timing-distance" style="color: #895f33;"><%= course.timing %> min - <%= course.distance %> km</div>
+            </div>
+          </div>
+        <% end %>
+        <% if user_signed_in? %>
+          <% if course.favourites.exists?(user: current_user) %>
+            <%= link_to course_favourite_path(course_id: course.id, id: course.favourites.find_by(user: current_user)), data: { turbo_method: :delete }, class: "favourite-link" do %>
+              <i class="fa-solid fa-heart position-absolute" style="color: red; top: 35px; left: 35px; font-size: 30px;"></i>
             <% end %>
-          </div>
-        </div>
-        <div class="card-body">
-          <div class="d-flex justify-content-between">
-            <h5 class="card-title" style="color: #895f33;"><%= course.name %></h5>
-            <div class="d-flex ml-auto gap-1" style="color: #895f33;">
-              <% if course.trashs %>
-                <i class="fa fa-trash gap-1"></i>
-              <% end %>
-              <% if course.water %>
-                <i class="fa-solid fa-droplet gap-1"></i>
-              <% end %>
-              <% if course.poopbag %>
-                <i class="fa-solid fa-poo"></i>
-              <% end %>
-              <% if course.familyfriendly %>
-                <i class="fa-solid fa-people-group gap-1"></i>
-              <% end %>
-            </div>
-          </div>
-          <div class="d-flex justify-content-between" style="color: #895f33;">
-            <div>
-              <% course.average.to_i.times do %>
-                <i class="fa-solid fa-star"></i>
-              <% end %>
-              <% (5 - course.average.to_i).times do %>
-                <i class="fa-regular fa-star"></i>
-              <% end %>
-            </div>
-            <div class="card-timing-distance" style="color: #895f33;"><%= course.timing %> min - <%= course.distance %> km</div>
-          </div>
-        </div>
+          <% else %>
+            <%= link_to course_favourites_path(course_id: course.id), data: { turbo_method: :post }, class: "favourite-link" do %>
+              <i class="fa-regular fa-heart position-absolute" style="color: red; top: 35px; left: 35px; font-size: 30px;"></i>
+            <% end %>
+          <% end %>
+        <% end %>
       </div>
-      <% end %>
     <% end %>
   </div>
