--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -21,7 +21,7 @@
   }
 }
 
-#simpleButton {
+.simpleButton {
   display: inline-block;
   border: 1px solid white;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -76,7 +76,7 @@
   width: 30%;
 }
 
-#buttonAchat {
+.buttonWhite {
   display: inline-block;
   border: 1px solid white;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
