--- a/app/views/user_rewards/index.html.erb
+++ b/app/views/user_rewards/index.html.erb
@@ -3,7 +3,7 @@
     <% @user_rewards.each do |user_reward| %>
       <div class="col-md-4">
         <div class="card mb-4", id="card-user-reward" >
-          <div class="card-body">
+          <div class="card-body" data-controller="promo-code">
             <h5 class="card-title" style="font-weight-bold; color: #895f33;"><%= user_reward.reward.name %></h5>
             <p class="card-text"><b>Réduction: </b><%= user_reward.reward.reduction %> %</p>
     <div class="border-0 d-flex justify-content-between">
@@ -28,16 +28,16 @@
               <% elsif user_reward.progress == 'used' %>
                 <i>Terminé</i>
               <% end %>
-            </p>
+             </p>
+
+            <button data-action="click->promo-code#showCode" class="btn btn-primary mt-2">Code promo</button>
+            <div data-promo-code-target="code" class="mt-2" style="display: none;">
+              <span id="promo-code-<%= user_reward.id %>"><%= user_reward.reward.promocode %></span>
+              <button data-action="click->promo-code#copyCode" data-promo-code-id="<%= user_reward.id %>" class="btn btn-secondary btn-sm">Copier le code</button>
+            </div>
           </div>
         </div>
       </div>
     <% end %>
   </div>
-    <%# <div class="d-flex align-items-center">
-    <span id="discount-code" class="me-3">DISCOUNT2024</span>
-    <button data-controller="clipboard" data-action="click->clipboard#copy" class="btn btn-primary">
-      Copier le code
-    </button>
-  </div> %>
 </div>
