--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -118,7 +118,7 @@
     </div>
     <div class="container m-0">
       <div class="row row-cols-2 mb-3" style="color: #895f33;">
-        <div class="col-sm-4">Distance : <%= @course.distance %>m</div>
+        <div class="col-sm-4">Distance : <%= @course.distance %>km</div>
         <div class="col-sm-4">Difficulté : <%= @course.difficulty %>/5</div>
         <div class="col-sm-4">Timing : <%= @course.timing %>min</div>
       </div>
