--- a/app/assets/stylesheets/components/_topbar.scss
+++ b/app/assets/stylesheets/components/_topbar.scss
@@ -4,7 +4,8 @@
   top: 0;
   z-index: 10000;
   h1 {
-    max-width: 220px;
+    margin-top: 50px;
+    max-width: 200px;
     text-align: center;
   }
 
