save ajust front

--- a/app/assets/stylesheets/rides/_index.scss
+++ b/app/assets/stylesheets/rides/_index.scss
@@ -1,2 +1,10 @@
 @import "navigate";
 @import "edit";
+
+.text-lg {
+  font-size: 25px;
+}
+
+.text-area-centered::placeholder {
+  text-align: center;
+}
