--- a/app/assets/stylesheets/rides/_show.scss
+++ b/app/assets/stylesheets/rides/_show.scss
@@ -51,3 +51,24 @@
   width: 80%;
   font-family: "Teachers", sans-serif !important;
 }
+
+.btn-carousel {
+  display: inline-block;
+  border: 1px solid white;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition-duration: 0.4s;
+  // background-color: #97c475;
+  // color: black;
+  background-color: $light-beige;
+  color: $brown;
+  position: relative;
+  border-radius: 10px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  padding: 5px;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  width: 80%;
+  font-family: "Teachers", sans-serif !important;
+}
