--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -43,7 +43,7 @@
       <% end %>
     </div>
     <div class="d-flex justify-content-center p-1">
-      <button type="button" id="simpleButton" class="border-0 btn-carousel data-bs-toggle="modal" data-bs-target="#modalPhoto">Photo de la course</button>
+      <button type="button" class="border-0 btn btn-primary simpleButton" data-bs-toggle="modal" data-bs-target="#modalPhoto">Photo de la course</button>
     </div>
     <div class="modal fade" id="modalPhoto" tabindex="-1" aria-labelledby="modal photo" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
@@ -110,7 +110,7 @@
               <p class= "col-6">Poubelles: <i class="fa fa-trash"></i></p>
               <p class= "col-6">Points d'eau: <i class="fa-solid fa-droplet"></i></p>
               <p class= "col-6">Sacs canin: <i class="fa-solid fa-poo"></i></p>
-              <p class= "col-6">Famille présente: <i class="fa-solid fa-people-group"></i></p>
+              <p class= "col-6">Convient au famille: <i class="fa-solid fa-people-group"></i></p>
             </div>
           </div>
         </div>
